spacing fix

--- a/src/scss/community/community.scss
+++ b/src/scss/community/community.scss
@@ -121,7 +121,7 @@ div[data-dojo-attach-point="_tagSearchText"] a,
 }
 
 .lotusui {
-  > .lotusCommunities {
+  > .lotusCommunities.lotusWidget_3columnsTopMenuLayout {
     .lotusBanner {
       margin-bottom: 140px;
     }
